# my-fps-game

./: CMakeLists.txt  README.md
assets/: enemy_anim.xml
src/: main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.h
src/core/: GameApp.cpp  GameApp.h  InputState.h
src/gameplay/: EnemyActor.cpp  EnemyActor.h  FirstPersonCamera.cpp  FirstPersonCamera.h  PlayerController.cpp  PlayerController.h  WeaponSystem.cpp  WeaponSystem.h
src/physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/rendering/: OpenGLCompat.h  ParticleSystem.cpp  ParticleSystem.h  SpriteAnimation.cpp  SpriteAnimation.h  Texture2D.cpp  Texture2D.h
src/ui/: HudLayer.cpp  HudLayer.h
